--- a/CLIHelperTests/CLIHelperTests.vcxproj
+++ b/CLIHelperTests/CLIHelperTests.vcxproj
@@ -93,7 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;..\Debug\CLIHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -111,7 +111,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;..\Debug\CLIHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -125,7 +125,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;..\Debug\CLIHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,10 +143,21 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(CPPUTEST_HOME)\lib\CppUTestd.lib;..\Debug\CLIHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="group_all_fields_empty.cpp" />
+    <ClCompile Include="group_chop.cpp" />
+    <ClCompile Include="group_extract_field.cpp" />
+    <ClCompile Include="group_field_count.cpp" />
+    <ClCompile Include="group_field_is.cpp" />
+    <ClCompile Include="group_find_match.cpp" />
+    <ClCompile Include="group_grab_from_space.cpp" />
+    <ClCompile Include="group_grab_until_space.cpp" />
+    <ClCompile Include="group_read_input.cpp" />
+    <ClCompile Include="group_strip_leading_spaces.cpp" />
+    <ClCompile Include="ifstream_tests.cpp" />
     <ClCompile Include="test_runner.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
