--- a/CLIHelperTests/CLIHelperTests.vcxproj.filters
+++ b/CLIHelperTests/CLIHelperTests.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="ifstream_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="group_argument_count.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
