--- a/CLIHelperTests/CLIHelperTests.vcxproj.filters
+++ b/CLIHelperTests/CLIHelperTests.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="group_head_is.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="group_argument_is.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
